mobileapp.css
ion-app {
    --default-margin: 15px;
}
/* General Mobile forumng style adjustments */
.mma-forumng-image-correction {
    display: inline;
    width: auto;
    min-width: 25px;
    vertical-align: middle;
}
.mma-forumng-gray-text {
    color: #767676;
}
.mma-forumng-align-items-normal {
    align-items: normal;
}
.mma-forumng-no-margin {
    margin: 0;
}

/* Discussions listing page */
.mma-forumng-discussion-list .mma-forumng-discussion-card .mma-forumng-iconsize-correction ion-icon[item-start] {
    margin: 0;
}
.mma-forumng-discussion-list .mma-forumng-header {
    margin: 0;
    border-bottom: 1px solid #d3d3d3;
}
.mma-forumng-discussion-list .mma-forumng-discussion-card {
    margin: 2px;
    width: calc(100% - 4px);
}
[dir="ltr"] .list-md.mma-forumng-discussion-list {
    margin-bottom: 0;
}
.mma-forumng-infinite-scroll ion-infinite-scroll-content {
    min-height: 10px;
}

.mma-forumng-discussion-listing .mma-forumng-infinite-scroll ion-infinite-scroll-content .infinite-loading {
    margin: 10px 0;
}

/* Fixed large border at the bottom of FAB*/
.mma-forumng-discussion-listing .fixed-content,
.mma-forumng-discussion-listing .scroll-content {
    margin-bottom: 0px !important;
}

html[style="font-size: 93.75%;"] .mma-forumng-discussion-list core-format-text[maxHeight].core-text-formatted.core-shortened.mma-forumng-discussion-introduction {
    max-height: 105px !important;
}
html[style="font-size: 75.89%;"] .mma-forumng-discussion-list core-format-text[maxHeight].core-text-formatted.core-shortened.mma-forumng-discussion-introduction {
    max-height: 90px !important;
}
.mma-forumng-discussion-list core-format-text[maxHeight].core-text-formatted.core-shortened.mma-forumng-discussion-introduction {
    max-height: 80px !important;
}

.mma-forumng-discussion-list core-format-text[maxHeight].core-text-formatted.core-shortened.mma-forumng-discussion-introduction:before {
    background: -webkit-gradient(left top, left bottom, color-stop(calc(100% - 50px), rgba(255, 255, 255, 0)), color-stop(calc(100% - 15px), white));
    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) calc(100% - 50px), white calc(100% - 15px));
}

.mma-forumng-discussion-list core-format-text[maxHeight].core-text-formatted.core-shortened.mma-forumng-discussion-introduction .core-show-more {
    display: block;
}

.mma-forumng-discussion-list .mma-forumng-drafts {
    padding-left: 0;
    padding-right: 0;
}

.mma-forumng-discussion-list .mma-forumng-drafts ion-col {
    width: 95%;
}

.mma-forumng-discussion-list .mma-forumng-drafts .mma-forumng-draft-heading img {
    position: relative;
    top: 1px;
}

body:not(.ionic5) .mma-forumng-discussion-list .mma-forumng-drafts ion-row,
body:not(.ionic5) .mma-forumng-discussion-list ion-item.mma-forumng-discussion-item:not(.no-lines) {
    border-bottom: 1px solid #c8c7cc !important;
}

body.ionic5 .mma-forumng-discussion-list .mma-forumng-drafts ion-row:nth-child(2) {
    border-top: 1px solid #dee2e6;
    border-left: 1px solid #dee2e6;
    border-right: 1px solid #dee2e6;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    min-height: 43px;
    background-color: #f8f9fa;
    padding-left: 5px;
    align-items: center;
}

body.ionic5 .mma-forumng-discussion-list .mma-forumng-drafts ion-row:nth-child(n+2),
body.ionic5 .mma-forumng-discussion-list ion-item.mma-forumng-discussion-item:not(.no-lines) {
    border-top: 1px solid #dee2e6;
    border-left: 1px solid #dee2e6;
    border-right: 1px solid #dee2e6;
}

body.ionic5 .mma-forumng-discussion-list ion-item.mma-forumng-discussion-item:not(.no-lines) {
    margin: 0px 10px 0 10px;
}

body.ionic5 .mma-forumng-discussion-list .mma-forumng-drafts ion-row:last-child,
body.ionic5 .mma-forumng-discussion-list ion-item.mma-forumng-discussion-item:not(.no-lines):last-child {
    border-bottom: 1px solid #dee2e6;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

body.ionic5  .mma-forumng-discussion-list .mma-forumng-discussion-show-dates {
    border-radius: 10px;
}

.mma-forumng-discussion-list .mma-forumng-discussion-show-dates {
    margin-bottom: 10px;
    padding: 5px;
    border: 1px dotted #555;
}

.mma-forumng-discussion-list .mma-forumng-read-only {
    display: inline-block;
    font-weight: bold;
    white-space: nowrap;
    background: #002158;
    color: #fff;
    width: auto;
    min-width: 1.5625em;
    border-radius: 50%;
    font-size: initial;
    vertical-align: middle;
    height: 1.5625em;
    text-align: center;
}

.mma-forumng-discussion-list .mma-forumng-read-only core-format-text {
    font-size: 0.7em;
}

.mma-forumng-discussion-list .mma-forumng-discussion {
    width: 100%;
}

.mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-content {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 15px 0 11px 0;
}

.mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-icons,
.mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-icons .forumng-locked,
.mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-icons .forumng-sticky,
.mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-icons .forumng-timeout {
    display: flex;
}

.mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-subject {
    margin-bottom: 3px;
}

.mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-subject,
.mma-forumng-discussion-list .mma-forumng-drafts .cell.c0 {
    font-size: 1.6rem;
    font-weight: 400;
    line-height: normal;
    color: #0b55a8;
}

.mma-forumng-discussion-list .mma-forumng-drafts .mma-forumng-draft-heading,
.mma-forumng-posts-list-wrapper .mma-forumng-posts-subject {
    color: #002158;
    font-weight: 700;
    display: block;
}

.mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-last-post {
    font-size: 1.4rem;
}
/* ... */

